Fjerner Kodeverk Webservice + sonarcloud fikser (#871)